# forek

./: .clang-format  .clang-tidy  .editorconfig  .gdbinit  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: antlr.yml  cpp.yml
docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  index.html
docs/latex/: refman.tex
examples/: CMakeLists.txt
examples/experiments/ltl/data/: exp05.req
examples/experiments/pl/: benchmarks.csv
examples/experiments/pl/data/: exp02.req
examples/experiments/tptl/: benchmarks.csv  exp.hpp
examples/experiments/tptl/data/: exp03.req  exp04.req
examples/experiments/utils/: plot.py
examples/ltl/: CMakeLists.txt  ex01.cpp  ex01.hpp
examples/mtl/: CMakeLists.txt  ex01.cpp
examples/pl/: CMakeLists.txt  ex01.cpp  ex01.hpp  example01.cpp  example02.cpp  main.cpp
examples/stl/: CMakeLists.txt  ex01.cpp  ex01.hpp
examples/stpl/: CMakeLists.txt  ex01.cpp
examples/tptl/: CMakeLists.txt  ex01.cpp  ex01.hpp
examples/tqtl/: CMakeLists.txt  ex01.cpp
extras/: CMakeLists.txt
extras/experiments/ltl/: CMakeLists.txt  benchmarks.csv  exp01.hpp
extras/experiments/ltl/data/: exp03.req  exp04.req  exp06.req
extras/experiments/pl/: exp01.cpp  exp01.hpp
extras/experiments/pl/data/: exp04.req
extras/experiments/tptl/: CMakeLists.txt
extras/experiments/tptl/data/: exp06.req
extras/grammars/: CMakeLists.txt  CommonLexer.g4  CommonTokens.g4
extras/grammars/arithmetic/: ArithmeticLexer.g4  ArithmeticParser.g4  CMakeLists.txt
extras/grammars/logic/: CMakeLists.txt  LogicLexer.g4  LogicParser.g4
extras/grammars/logic/ltl/: CMakeLists.txt  LinearTemporalLogicLexer.g4  LinearTemporalLogicParser.g4
extras/grammars/ltl/: CMakeLists.txt  LinearTemporalLogicLexer.g4  LinearTemporalLogicParser.g4
extras/grammars/ltl/past/: CMakeLists.txt  PastTimeLinearTemporalLogicLexer.g4  PastTimeLinearTemporalLogicParser.g4
extras/grammars/mtl/: CMakeLists.txt  MetricTemporalLogicLexer.g4  MetricTemporalLogicParser.g4
extras/grammars/pl/: CMakeLists.txt  PropositionalLogicLexer.g4  PropositionalLogicParser.g4
extras/grammars/stl/: CMakeLists.txt  SignalTemporalLogicLexer.g4  SignalTemporalLogicParser.g4
extras/grammars/stpl/: CMakeLists.txt  SpatioTemporalPerceptionLogicLexer.g4  SpatioTemporalPerceptionLogicParser.g4
extras/grammars/tptl/: CMakeLists.txt  TimedPropositionalTemporalLogicLexer.g4  TimedPropositionalTemporalLogicParser.g4
extras/grammars/tqtl/: CMakeLists.txt  TimedQualityTemporalLogicLexer.g4  TimedQualityTemporalLogicParser.g4
include/forek/: forek.hpp
include/forek/formula/: formula.hpp
include/forek/formula/core/: node.hpp
include/forek/formula/operand/: operand.hpp  proposition.hpp
include/forek/formula/operation/: binary.hpp  operation.hpp  unary.hpp
include/forek/formula/visitor/: visitor.hpp
include/forek/specification/: specification.hpp
include/forek/specification/ltl/: ltl.hpp
include/forek/specification/mtl/: impl.hpp  mtl.hpp
include/forek/specification/pl/: impl.hpp  pl.hpp
include/forek/specification/stl/: impl.hpp  ltl.hpp  stl.hpp
include/forek/specification/stpl/: impl.hpp  stpl.hpp  tptl.hpp
include/forek/specification/tptl/: impl.hpp
include/forek/specification/tqtl/: impl.hpp  tqtl.hpp
include/pyforel/: pyforel.hpp
include/pyforel/formula/: formula.hpp
include/pyforel/formula/core/: node.hpp
include/pyforel/formula/operand/: operand.hpp  predicate.hpp  proposition.hpp
include/pyforel/formula/operation/: binary.hpp  operation.hpp  unary.hpp
include/pyforel/ir/: formula.hpp
include/pyforel/ir/atom/: proposition.hpp
include/pyforel/ir/operand/: proposition.hpp
include/pyforel/ir/operation/: operation.hpp
include/pyforel/parsers/core/: parser.hpp
include/pyforel/specification/: specification.hpp
include/pyforel/specification/ltl/: ltl.hpp
include/pyforel/specification/pl/: pl.hpp
src/: CMakeLists.txt
src/formula/: CMakeLists.txt  formula.cpp
src/formula/core/: CMakeLists.txt  node.cpp
src/formula/core/operand/: CMakeLists.txt  operand.cpp
src/formula/core/operation/: CMakeLists.txt  binary.cpp  operation.cpp  unary.cpp
src/formula/operand/: CMakeLists.txt  operand.cpp  predicate.cpp  proposition.cpp
src/formula/operation/: CMakeLists.txt  binary.cpp  operation.cpp  unary.cpp
src/formula/operation/ltl/: CMakeLists.txt  always.cpp  eventually.cpp  next.cpp  release.cpp  until.cpp
src/formula/operation/pl/: and.cpp  iff.cpp  implies.cpp  not.cpp  or.cpp
src/formula/visitor/: CMakeLists.txt  visitor.cpp
src/formula/visitor/arithmetic/: visitor.cpp
src/formula/visitor/ltl/: visitor.cpp
src/formula/visitor/pl/: visitor.cpp
src/ir/: CMakeLists.txt  formula.cpp
src/ir/core/node/: CMakeLists.txt  binary.cpp  node.cpp  nullary.cpp  unary.cpp
src/ir/operand/: CMakeLists.txt  proposition.cpp
src/ir/operation/: CMakeLists.txt  operation.cpp
src/ir/operation/pl/: CMakeLists.txt  and.cpp  false.cpp  iff.cpp  implies.cpp  (+3 more)
src/ir/operator/: CMakeLists.txt  operator.cpp
src/specification/: CMakeLists.txt  specification.cpp
src/specification/ltl/: CMakeLists.txt  builder.hpp  impl.tpp.hpp  ltl.cpp
src/specification/mtl/: CMakeLists.txt  builder.hpp  impl.tpp.hpp  mtl.cpp
src/specification/pl/: CMakeLists.txt  builder.hpp  impl.tpp.hpp  pl.cpp
src/specification/stl/: CMakeLists.txt  builder.hpp  impl.tpp.hpp  stl.cpp
src/specification/stpl/: CMakeLists.txt  builder.hpp  impl.tpp.hpp  stpl.cpp
src/specification/tptl/: tptl.cpp
src/specification/tqtl/: CMakeLists.txt  builder.hpp  impl.tpp.hpp  tqtl.cpp
tests/benchmarks/: CMakeLists.txt
tests/benchmarks/ltl/: exp01.cpp
tests/benchmarks/mtl/: CMakeLists.txt  benchmarks.csv  exp01.cpp  exp01.hpp
tests/benchmarks/pl/: CMakeLists.txt
tests/benchmarks/stl/: CMakeLists.txt  benchmarks.csv  exp01.cpp  exp01.hpp
tests/benchmarks/stpl/: CMakeLists.txt  benchmarks.csv  exp.cpp  exp.hpp
tests/benchmarks/tptl/: exp.cpp
tests/benchmarks/tqtl/: CMakeLists.txt  benchmarks.csv  exp.cpp  exp.hpp
tests/benchmarks/utils/: plot.py
(+185 files in other folders)
